[package]
name = "no-cli"
description = "Say no with some pzazz."
authors = ["Hugo Saracino <hugo.saracino@gmail.com>"]
version = "0.3.0"
readme = "README.md"
license = "MIT"
edition = "2024"

[[bin]]
name = "no"
path = "src/main.rs"

[profile.release]
strip = "symbols"
lto = true
codegen-units = 1

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
rand = "0.9.1"
